<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">English</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="level_0">Beginner</string>
    <string name="level_1">Pre intermediate</string>
    <string name="level_2">Intermediate</string>
    <string name="level_3">Upper intermediate</string>
    <string name="level_4">Advanced</string>

    <string name="level_label">Please choose your level</string>

    <string name="days_left">%s days left</string>
    <string name="days_expired">Subscription expired</string>
</resources>
